# olly

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  redis.conf
.github/workflows/: ci.yml  rust.yml
client/: .gitignore  cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts
client/cypress/e2e/: navigation.cy.ts  onboarding.cy.ts
client/src/: App.tsx  app.tsx  entry-server.tsx  global.d.ts  handlers.ts  index.tsx  types.ts
client/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
client/src/app/about/: page.tsx
client/src/app/account/: layout.tsx  page.tsx
client/src/app/account/edit/: layout.tsx
client/src/app/account/edit/password/: page.tsx
client/src/app/account/edit/username/: page.tsx
client/src/app/join/: page.tsx
client/src/app/login/: page.tsx
client/src/app/logout/: page.tsx
client/src/app/new/: page.tsx
client/src/app/play/: page.tsx
client/src/app/register/: page.tsx
client/src/components/: Circle.tsx  CustomToaster.tsx  GameList.tsx  Navbar.tsx  PendingGameList.tsx  Square.tsx  StatusText.tsx
client/src/components/board/: Square.tsx
client/src/components/friends/: FriendsList.tsx  IncomingFriendRequests.tsx  MergedFriendRequests.tsx  OutgoingFriendRequests.tsx
client/src/components/input/: Field.tsx
client/src/handlers/: index.ts
client/src/lib/: call.ts  createGame.ts  currentUser.ts  handlers.ts  index.ts  showToast.ts  simpleGet.ts  useGames.ts  useUser.ts
client/src/lib/hooks/: useFriends.ts  useGames.ts  useIncomingFriendRequests.ts  useOutgoingFriendRequests.ts  usePendingGames.ts  useUser.ts
client/src/routes/: [...404].tsx  about.tsx  account.tsx  index.tsx  join.tsx  login.tsx  new.tsx  play.tsx  register.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20240112_000001_create_members_table.rs  m20240112_000002_unique_username.rs  m20240112_000003_create_sessions_table.rs  m20240113_000004_create_games_table.rs  m20240113_000005_null_guest.rs  m20240113_000006_non_null_guest.rs  m20240527_185255_create_friends.rs  m20240527_191255_create_friend_requests.rs  m20240621_143622_invite_only_games.rs  m20241019_164847_game_endings_and_stats.rs
nix/: devShell.nix
src/: board.rs  companion.rs  game.rs  lib.rs  state.rs
src/server/: errors.rs  helpers.rs  mod.rs  packet.rs  state.rs  strings.rs
src/server/entities/: friend.rs  friend_request.rs  game.rs  member.rs  mod.rs  prelude.rs  session.rs
src/server/extractors/: mod.rs
src/server/handlers/: companion.rs  create.rs  friend_request.rs  game.rs  live.rs  login.rs  logout.rs  me.rs  mod.rs  register.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
tests/: mod.rs
