[package]
name = "othello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
uuid = { version = "1.6.1", features = ["v7", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
serde_repr = "0.1.18"
