[package]
name = "othello"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.7.3", features = ["ws"] }
base64 = "0.21.7"
futures = "0.3.30"
rand = "0.8.5"
reqwest = "0.11.23"
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "mock", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = "0.4.13"
uuid = { version = "1.6.1", features = ["v7", "fast-rng", "macro-diagnostics"] }
