[package]
name = "olly"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "migration",
    "test-utils"
]

[[bin]]
name = "olly-server"
path = "src/bin/main.rs"

[lints.clippy]
pedantic = "deny"

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.7.3", features = ["ws"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
base64 = "0.21.7"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
redis = "0.25.4"
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls", "mock", "macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_repr = "0.1.18"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"] }
uuid = { version = "1.6.1", features = ["v7", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
test-utils = { path = "test-utils" }
