[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = { version = "0.11.23", features = ["cookies"] }
serde = "1.0.195"
serde_json = "1.0.111"
tokio = "1.35.1"
